 * LiteApp : update view menu
 * LiteApp : fix check modify and save
 * GolangFmt : fix fmt editor style restore
 * GolangDoc : fix go/doc/*.html parser meta "Path="
 * GolangAst : fix update model style restore
 * Welcome : update page
 * LiteEnv : edit enviroment action
 * LiteBuild : update gosrc.xml
 * LiteBuild : fix double click goto line regexp 
 * LiteBuild : show enviroment go env
 * LiteEditor : go wordapi update, keyword types and funcs
 * LiteEditor : code compelter func auto append ()
 * FileSystem : fix execute find path
 * LiteFind : fix current directory 
==== 2012.9.24 Ver x13.1 ====
 * LiteBuild : fix build load crash.
 * LiteApp : fix double click error output regexp
 * LiteApp : fix folder drop to liteide
 * LiteDebug : watch vars load /save by project
 * LiteDebug : breakpoint load /save by file
 * LiteDebug : add remove all breakpoint action
 * LiteDebug : add / remove global or local watch point
 * LiteEditor : optimization editor mark
 * LiteEditor : enable drop text
 * GolangPlay : enable gofmt
==== 2012.9.21 Ver x13 ====
 * LiteApp : any folder, any file to build
 * LiteApp : update window style, add editor toolbar and status
 * LiteEditor : remove editor toolbar 
 * LiteEditor : extra use editor font
 * LiteBuild : new build toolbar and menu
 * LiteBuild : clean action tags
 * GolangFmt : sync execute gofmt
 * GolangDoc : deply filter index
 * GolangAst : classview for folder
 * Outline : alltime expand
 * FileBrowser : rename to FileSystem
 * FileSystem : sync editor file to folder
 * FileSystem : add go command line edit (Ctrl+`)
 * FileSystem : double click execute file and execute on build output
 * Windows : include diff bin
 === 2012.9.14 Ver x12.5 ====
 * LiteApp : move dock style, change to idea style tool windows.
 * LiteApp : double click editor and maximized or restore editor
 * LiteApp : esc key to hide bottom tool windows
 * LiteApp : auto load last session
 * LiteEditor : add edit navigate histroy