@@ -9,7 +9,7 @@
 	<div id="container">
 		<div id="topnav">	
 			<h1 id="title" align="center"><img src="images/liteide64.png" align ="right">Welcome to LiteIDE X</h1>
-<pre align="center">Copyright 2011-2012, Author <a href="mailto:visualfc@gmail.com">visualfc</a>, Version <a href="doc:/CHANGES.TXT">x13.2 (hg700)</a></pre>
+<pre align="center">Copyright 2011-2012, Author <a href="mailto:visualfc@gmail.com">visualfc</a>, Version <a href="doc:/CHANGES.TXT">x13.2 (hg703)</a></pre>
 		</div>		
 		<div id="content">
 		<h3>Website Links</h3>
